Fixed Scale Squash Horizontally

--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,8 @@ body{
 
 .greeting-header, .subtitle{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 4rem;
+    /* originally 4rem (64px). On a 1920px-wide screen 1vw = 19.2px, so 64px = 3.333vw */
+    font-size: 3.333vw;
     margin: 0 auto;
 }
 
@@ -93,7 +94,8 @@ body{
 
     display:inline;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 5rem;
+    /* originally 5rem (80px). On a 1920px-wide screen 1vw = 19.2px, so 80px = 4.167vw */
+    font-size: 4.167vw;
     margin: 0 auto;
 }
 
@@ -108,7 +110,8 @@ body{
 
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
-    font-size: 3em;
+    /* originally 3em (~48px). On a 1920px-wide screen 1vw = 19.2px, so 48px = 2.5vw */
+    font-size: 2.5vw;
 
     cursor:pointer;
 
@@ -146,7 +149,8 @@ body{
 
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
-    font-size: 3em;
+    /* originally 3em (~48px). On a 1920px-wide screen 1vw = 19.2px, so 48px = 2.5vw */
+    font-size: 2.5vw;
 }
 
 .progress-bar{
